infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  # Selector works together with metadata
  # 'app' is just a key - could be anything
  # The selector/matchLabels tells what pods it should manage (find)
  selector:
    matchLabels:
      app: auth
  # Metadata works together with selector
  # Specifies configuration for creating pods.
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          # latest is default if not specified
          image: insidedocker/auth:latest
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  # Default is ClusterIP
  type: ClusterIP
  # Selector works together with DEPL.template.metadata.label
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
