infra/k8s/nats-postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-postgres-depl
spec:
  replicas: 1
  # Selector works together with metadata
  # 'app' is just a key - could be anything
  # The selector/matchLabels tells what pods it should manage (find)
  selector:
    matchLabels:
      app: nats-postgres
  # Metadata works together with selector
  # Specifies configuration for creating pods.
  template:
    metadata:
      labels:
        app: nats-postgres
    spec:
      containers:
        - name: nats-postgres
          # latest is default if not specified
          image: postgres
          volumeMounts:
            # select which volume that should be mounted into 'mountPath'
            - name: nats-postgres-data
              # mount the volume/subPath into ->
              # This means that the volume root will have a subfolder 'postgres' where all content will be located
              # Without a subPath, there was no need to create the directory specified by PV spec.hostPath.path.
              # With a subPath, I had to create the directory(!?)
              # Reason for subPath is that Digital Ocean PV wasn't empty and postgres complained about it (lost&found folder).
              mountPath: /var/lib/postgresql/data
              subPath: postgres
      volumes:
        # name the volume so that it can be referenced above and specify the claim
        - name: nats-postgres-data
          persistentVolumeClaim:
            claimName: nats-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nats-postgres-srv
spec:
  # Default is ClusterIP
  type: ClusterIP
  # Selector works together with DEPL.template.metadata.label
  selector:
    app: nats-postgres
  ports:
    # the name is just for logging purposes, can be anything
    - name: nats-postgres
      protocol: TCP
      # the port that Cluster is listening on
      port: 5432
      # the port that pod/container is listening on
      targetPort: 5432
