infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec:
  replicas: 1
  # Selector works together with metadata
  # 'app' is just a key - could be anything
  # The selector/matchLabels tells what pods it should manage (find)
  selector:
    matchLabels:
      app: payments
  # Metadata works together with selector
  # Specifies configuration for creating pods.
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          # latest is default if not specified
          image: insidedocker/payments:latest
---
apiVersion: v1
kind: Service
metadata:
  name: payments-srv
spec:
  # Default is ClusterIP
  type: ClusterIP
  # Selector works together with DEPL.template.metadata.label
  selector:
    app: payments
  ports:
    # the name is just for logging purposes, can be anything
    - name: payments
      protocol: TCP
      # the port that Cluster is listening on
      port: 3000
      # the port that pod/container is listening on
      targetPort: 3000
